2007-01-23  Thomas Wood  <thos@gnome.org>

	* gnome-theme-installer.c: (transfer_done_cb): Fix a compiler warning

2007-01-19  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (update_color_scheme_tab),
	(gnome_theme_details_update_from_gconf):
	* gnome-theme-manager.c: (gtk_theme_key_changed):
	* theme-properties.glade:

	Add a Revert button to the color schemes tab

2007-01-19  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (update_color_scheme_tab), (color_select),
	(toggle_color_scheme_key):
	* gnome-theme-manager.c: (free_all), (load_meta_themes),
	(meta_theme_setup_info), (meta_theme_selection_changed),
	(update_themes_from_disk), (add_custom_row_to_meta_theme),
	(themes_equal), (update_settings_from_gconf_idle),
	(update_settings_from_gconf), (gtk_theme_key_changed),
	(setup_dialog):
	* gnome-theme-save.c: (write_theme_to_disk):
	* theme-properties.glade:

	- Remove seperate color scheme saving UI
	- Add support for gtk-color-scheme key in metatheme info

2007-01-12  Thomas Wood  <thos@gnome.org>

	Patch by:  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-details.c: (color_scheme_combobox_changed): Fix build with
	gcc 2 (c89 fixes). Fixes bug 394707.

2007-01-08  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: added missing EXTRA_DIST files.

2007-01-08  Thomas Wood  <thos@gnome.org>

	Patch by: Alberto Ruiz <aruiz@synaptia.net>

	* gnome-theme-installer.c: (gnome_theme_install_from_uri): Accept .gtp
	as a file extension

2007-01-08  Jan Arne Petersen <jap@gnome.org>

	* Makefile.am: Updated CLEANFILES
	* gnome-theme-package.xml: Removed from svn (built file).
	* ./: Updated svn:ignore properties.

2007-01-08  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (color_select),
	(color_scheme_combobox_changed), (gnome_theme_details_init),
	(update_color_buttons_from_string),
	(gnome_theme_details_update_from_gconf):
	* theme-properties.glade:

	Add Save/Delete dialogs for colour schemes.

2007-01-08  Thomas Wood  <thos@gnome.org>