@@ -1,3 +1,10 @@
+2007-01-26  Thomas Wood  <thos@gnome.org>
+
+	Patch by: Alberto Ruiz <aruiz@synaptia.net>
+
+	* gnome-theme-installer.c: (transfer_done_cb),
+	(gnome_theme_install_from_uri): Fixes on the suffix checks.
+
 2007-01-23  Thomas Wood  <thos@gnome.org>
 
 	* gnome-theme-installer.c: (transfer_done_cb): Fix a compiler warning
